--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "mint" # "default", "air", "aqua", "contrast", "dark"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "무작정 해보는 공대생의 정리 노트"
+title                    : "실패를 기록하는 공대생의 정리 노트"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Deep learner"
-description              : "F5를 먼저 누르는 성격 급한 대학원생의 정리 노트"
+description              : "목적을 위해 일단 시작하고 발생되는 문제점들을 수정하는 과정을 기록하는 정리 노트"
 url                      : "https://aithlab.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Deep Learner"
   avatar           : "assets/images/test.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "F5부터 누르고 보는 성격 급한 공대생의 디버깅 노트"
   location         : "South Korea"
   email            :
   links:
