--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Deep Learner"
-  avatar           : "assets/images/test.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "F5부터 누르고 보는 성격 급한 공대생의 디버깅 노트"
   location         : "South Korea"
   email            :
